change the path to test data as variable

--- a/DrillSplit.UnitTest/DrillSplit.UnitTest.csproj
+++ b/DrillSplit.UnitTest/DrillSplit.UnitTest.csproj
@@ -52,12 +52,27 @@
   <ItemGroup>
     <Compile Include="DrillSplitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DrillSplit.Lib\DrillSplit.Lib.csproj">
       <Project>{dd8025c6-cea5-431c-8eef-d2854bb09748}</Project>
       <Name>DrillSplit.Lib</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="test.nc" />
+    <None Include="test_short.nc" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
