--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -56,9 +56,9 @@ jobs:
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
 
     env:
-      Solution_Name: DrillSplit.slnj                         # Replace with your solution name, i.e. MyWpfApp.sln.
+      Solution_Name: DrillSplit.sln                         # Replace with your solution name, i.e. MyWpfApp.sln.
       Test_Project_Path: DrillSplit.UnitTest\DrillSplit.UnitTest.csproj                 # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
-      Project_Directory: .\DrillSplit.Lib   # DrillSplit.Lib Replace with the Wap project directory relative to the solution, i.e. MyWpfApp.Package.
+      Project_Directory: DrillSplit.Lib   # DrillSplit.Lib Replace with the Wap project directory relative to the solution, i.e. MyWpfApp.Package.
       Project_Path: DrillSplit.Lib\DrillSplit.Lib.csproj                   # Replace with the path to your Wap project, i.e. MyWpf.App.Package\MyWpfApp.Package.wapproj.
 
     steps:
