--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: windows-latest  
 
     env:
-      Solution_Name: DrillSplit.csproj                         # Replace with your solution name, i.e. MyWpfApp.sln.
+      Solution_Name: DrillSplit.UnitTests\DrillSplit.csproj                         # Replace with your solution name, i.e. MyWpfApp.sln.
       Test_Project_Path: DrillSplit.UnitTests\DrillSplit.UnitTests.csproj                 # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
      
     steps:
