--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -58,8 +58,8 @@ jobs:
     env:
       Solution_Name: DrillSplit.sln                       # Replace with your solution name, i.e. MyWpfApp.sln.
       Test_Project_Path: DrillSplit.UnitTest\DrillSplit.UnitTest.csproj                 # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
-      Wap_Project_Directory: DrillSplit.Wap    # Replace with the Wap project directory relative to the solution, i.e. MyWpfApp.Package.
-      Wap_Project_Path: DrillSplit.Wap\DrillSplit.Wap.wapproj                   # Replace with the path to your Wap project, i.e. MyWpf.App.Package\MyWpfApp.Package.wapproj.
+     # Wap_Project_Directory: DrillSplit.Wap    # Replace with the Wap project directory relative to the solution, i.e. MyWpfApp.Package.
+     # Wap_Project_Path: DrillSplit.Wap\DrillSplit.Wap.wapproj                   # Replace with the path to your Wap project, i.e. MyWpf.App.Package\MyWpfApp.Package.wapproj.
 
     steps:
     - name: Checkout
